# mintaka-cpp

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  bootstrap.ps1  bootstrap.sh  premake5.lua
.cargo/: config.toml
config/: cbindgen.toml
examples/: sysinfo.rs
examples/c/: premake5.lua
examples/c/src/: main.c
examples/cpp/: premake5.lua
examples/cpp/src/: main.cpp
include/: mintaka.h
include/mintaka/: framework.h  fs.h  http.h  json.h  macros.h  native.h  prelude.h  std.h
include/mintaka/platform/: android.h  apple.h  freebsd.h  ios.h  linux.h  mac.h  msvc.h  platform.h  unix.h  windows.h
scripts/: cbindgen.ps1  check.ps1  gmake.sh  linux.sh  msbuild.ps1  premake.bat  publish.ps1  windows.ps1
src/: consts.rs  cpu.rs  http.rs  lib.rs  log.rs  mem.rs  prelude.rs  sys.rs
src/bincode/: Cargo.toml  lib.rs
src/consts/: Cargo.toml  build.rs  lib.rs
src/database/: Cargo.toml  database.rs  error.rs  lib.rs  mysql.rs  postgres.rs  query.rs  sqlite.rs
src/error/: Cargo.toml  lib.rs
src/ffi/: Cargo.toml  lib.rs
src/fs/: Cargo.toml
src/hal/: Cargo.toml  cpu.rs  lib.rs  mem.rs  sys.rs
src/http/: Cargo.toml
src/io/: Cargo.toml
src/json/: Cargo.toml  lib.rs
src/log/: Cargo.toml  Logger.rs  LoggerOptions.rs  WebLogger.rs  colors.rs  lib.rs
src/macros/: Cargo.toml  lib.rs
src/mysql/: Cargo.toml
src/native/: Cargo.toml  consts.rs  cpu.rs  fs.rs  http.rs  lib.rs  log.rs  mem.rs
src/net/: Cargo.toml
src/postgres/: Cargo.toml
src/ron/: Cargo.toml  lib.rs  test.ron
src/sqlite/: Cargo.toml
src/time/: Cargo.toml
src/toml/: Cargo.toml  lib.rs
src/types/: Cargo.toml  arch.rs  future.rs  lib.rs  platform.rs
src/xml/: Cargo.toml  lib.rs  test.xml
src/yaml/: Cargo.toml  lib.rs
