[package]
name = "mintaka"
version = "0.0.4"
description = "Mintaka Framework"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "Apache-2.0"
edition = "2021"
publish = true

[lib]
name = "mintaka"
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
mintaka-consts = { version = "0.0.4", path = "./src/consts" }
mintaka-types = { version = "0.0.4",path = "./src/types" }
