[package]
name = "mintaka-bincode"
version = "0.0.4"
description = "Mintaka Bincode"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "mintaka_bincode"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
bincode = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
