[package]
name = "mintaka-consts"
version = "0.0.4"
description = "Mintaka Consts"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "Apache-2.0"
edition = "2021"
publish = true

[lib]
name = "mintaka_consts"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]

[build-dependencies]
vergen = { version = "=5.1.5", default-features = false, features = [
    "build",
    "cargo",
    "rustc",
] }
