[package]
name = "mintaka-ffi"
version = "0.0.4"
description = "Mintaka FFI"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "mintaka_ffi"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
mintaka-error = { path = "../error" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2.0"
