[package]
name = "mintaka-json"
version = "0.0.4"
description = "Mintaka JSON"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "mintaka_json"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
