[package]
name = "mintaka-native"
version = "0.0.4"
description = "Mintaka Native"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "Apache-2.0"
edition = "2021"
publish = true

[lib]
name = "mintaka_native"
crate-type = ["rlib", "cdylib", "staticlib"]
path = "lib.rs"

[dependencies]
mintaka = { version = "0.0.4", path = "../.." }
reqwest = { version = "0.11.18", features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "json",
    "blocking",
] }
libc = "0.2"
