[package]
name = "mintaka-native"
version = "0.0.4"
description = "Mintaka Native"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "Apache-2.0"
edition = "2021"
publish = true

[lib]
name = "mintaka"
crate-type = ["cdylib", "staticlib"]
path = "lib.rs"
doc = false

[dependencies]
mintaka = { version = "0.0.4", path = "../.." }
reqwest = { version = "0.11.18", features = ["gzip", "json", "blocking"] }
libc = "0.2"
