[package]
name = "mintaka-net"
version = "0.0.4"
description = "Mintaka Net"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
name = "mintaka_net"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
