[package]
name = "mintaka-ron"
version = "0.0.4"
description = "Mintaka RON"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "mintaka_ron"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ron = "0.8.1"
