[package]
name = "mintaka-time"
version = "0.0.4"
description = "Mintaka Time"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
name = "mintaka_time"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
