[package]
name = "mintaka-types"
version = "0.0.4"
description = "Mintaka Types"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "mintaka_types"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
mintaka-consts = { version = "0.0.4", path = "../consts" }
serde = { version = "1.0", features = ["derive"] }
type-uuid = "0.1.2"
uuid = { version = "1.1.1", features = ["serde", "v1", "v3", "v4", "v5", "v6", "v7", "v8"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.1.1", features = ["js", "v1", "v3", "v4", "v5", "v6", "v7", "v8"] }
