[package]
name = "mintaka-xml"
version = "0.0.4"
description = "Mintaka XML"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "mintaka_xml"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.30.0", features = ["serialize", "encoding"] }
